# JugaaduTranslatorrs

./: .env  .gitignore  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app(test).py  app(updated).py  app.py  pyproject.toml  report.md  requirements.txt  test.txt
.gitlab/:  issue_template.md  issue_template.md  merge_request_template.md
.gitlab/issue_templates/: Bug.md  Feature_Request.md
.gitlab/merge_request_templates/: Default.md
